k8s/pyapp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-app-deployment
  labels:
    app: py-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: py-app
  template:
    metadata:
      labels:
        app: py-app
    spec:
      containers:
        - name: py-app
          image: wensiet/devops-py-app:release
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
