k8s/pyapp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: py-app.wensiet.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: py-app-service
                port:
                  number: 8000
